fixed hover options getting cut off

--- a/src/public/scss/components/_stream-list-item.scss
+++ b/src/public/scss/components/_stream-list-item.scss
@@ -20,7 +20,7 @@
       background-color: $light;
       .hover-options {
         // top: 50%;
-        height: 13*$em;
+        height: 100%;
         max-height: 13*$em;
         padding: .5*$em;
         // transform: translate(0, -50%);
