--- a/src/public/scss/components/_video-list-item.scss
+++ b/src/public/scss/components/_video-list-item.scss
@@ -19,10 +19,11 @@
     &:hover {
       background-color: $light;
       .hover-options {
-        top: 50%;
-        max-height: 10*$em;
+        // top: 50%;
+        height: 100%;
+        max-height: 13*$em;
         padding: .5*$em;
-        transform: translate(0, -50%);
+        // transform: translate(0, -50%);
       }
     }
   }
